--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
 	],
 	"scripts": {
 		"dev": "next",
-		"build": "next build",
+		"build": "next build && npm run obfuscate-build",
 		"start": "next start",
-		"export": "next build && next export"
+		"export": "next build && next export",
+		"obfuscate-build": "next-css-obfuscator"
 	},
 	"dependencies": {
 		"next": "14.1.4",
@@ -25,6 +26,7 @@
 		"@types/react": "18.2.75",
 		"@types/react-dom": "18.2.24",
 		"autoprefixer": "10.4.19",
+		"next-css-obfuscator": "^2.2.15",
 		"postcss": "8.4.38",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.4.5"
